<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_two_text">Box Two</string>
    <string name="box_one_text">Box One</string>
    <string name="box_three_text">Box Three</string>
    <string name="box_4_text">Box Four</string>
    <string name="box_5_text">Box Five</string>
    <string name="how_to_pla">how to play ?</string>
    <string name="ans">click the boxes</string>
    <string name="red_btn">RED</string>
    <string name="blue_btn">Blue</string>
    <string name="yellow_btn">Yellow</string>
</resources>